...
    private let profileKey = "com.sharp-timer.profile"
    private let timerStateKey = "com.sharp-timer.timer-state"
    
    private let fileManager = FileManager.default
    @ObservationIgnored private lazy var supportDirectory: URL = {
        let urls = fileManager.urls(for: .applicationSupportDirectory, in: .userDomainMask)
        let supportDir = urls.first!.appendingPathComponent("Sharp Timer")
        try? fileManager.createDirectory(at: supportDir, withIntermediateDirectories: true)
        return supportDir
    }()
    @ObservationIgnored private lazy var timerStateFileURL: URL = supportDirectory.appendingPathComponent("timer-state.json")

    private(set) var profile: TimerProfile
...
